--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -67,3 +67,110 @@
     text-decoration: none;
     color: var(--color-nero);
 }
+
+
+/* ===== MEDIA QUERIES ====== */
+/* @media screen and (max-width: 1200px) {
+} */
+
+@media screen and (max-width: 1050px) {
+    /* ===== MAPS ======= */
+    .maps{
+        background-position: center;
+    }
+    /* ===== POLICIES ======= */
+    .policies{
+        justify-content: space-between;
+        padding: var(--padding-medium) 30px;
+    }
+}
+
+@media screen and (max-width: 892px) {
+    /* ===== MAPS ======= */
+    .maps{
+        height: 320px;
+        background-repeat: no-repeat;
+    }
+    /* ===== PARTNERS ====== */
+    .partners{
+        padding: 60px 20px;
+    }
+    .partners-container{
+        justify-content: space-between;
+    }
+    /* ===== POLICIES ======= */
+    .policies{
+        padding: 15px;
+    }
+    .policies a{
+        font-size: 13px;
+    }
+}
+
+@media screen and (max-width: 750px) {
+    /* ======= MAPS ====== */
+    .maps{
+        background-position: 75% 25%;
+    }
+    /* ===== PARTNERS ====== */
+    .partners{
+        padding: 40px;
+    }
+    .partners-container{
+        flex-direction: column;
+        justify-content: center;
+    }
+    .partners-container > *:not(:last-child){
+        margin-bottom: 50px;
+    }
+    .partner-image{
+        margin-top: 15px;
+    }
+    /* ===== POLICIES ======= */
+    .policies{
+        padding: 30px;
+        padding-bottom: 85px;
+        flex-direction: column;
+        align-items: center;
+    }
+    .policies > *:not(:last-child){
+        margin-bottom: 15px;
+    }
+    .policies a{
+        font-size: 15px;
+    }
+    .barra-verticale{
+        display: none;
+    }
+}
+
+/* @media screen and (max-width: 650px) {
+} */
+
+@media screen and (max-width: 500px) {
+    /* ===== MAPS ===== */
+    .maps{
+        background-position: 70% 20%;
+    }
+}
+
+@media screen and (max-width: 369px) {
+    /* ===== MAPS ===== */
+    .maps{
+        height: 350px;
+        background-position: 65%;
+    }
+    /* ===== POLICIES ======= */
+    .policies{
+        padding: 20px;
+        padding-bottom: 78px;
+        flex-direction: column;
+        align-items: center;
+    }
+    .policies > *:not(:last-child){
+        margin-bottom: 8px;
+    }
+    .policies a{
+        font-size: 14px;
+    }
+}
