--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -128,3 +128,186 @@
     width: 2px;
     background: white;
 }
+
+
+/* ===== MEDIA QUERIES ====== */
+@media screen and (max-width: 1200px) {
+    /* ===== HEADER ====== */
+    .navbar{
+        padding: 20px 50px;
+    }
+    .nav-links ul >:not(:last-child){
+        margin-right: 20px;
+    }
+}
+
+@media screen and (max-width: 1050px) {
+    /* ===== HEADER ====== */
+    .navbar{
+        padding: 10px 25px;
+        background: white;
+    }
+    .logo{
+        height: 70px;
+        width: 100px;
+    }
+    .nav-links{
+        height: 0;
+        position: absolute;
+        top: 126px;
+        left: 0;
+        width: 100%;
+        background: #11101b;
+        overflow: hidden;
+        transition: 0.5s;
+        display: flex;
+        justify-content: center;
+    }
+    .nav-links.active{
+        height: 300px;
+    }
+    .nav-links ul{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        opacity: 0;
+        transition: 0.5s;
+    }
+    .nav-links.active ul{
+        opacity: 1;
+    }
+    .nav-links ul >:not(:last-child){
+        margin-right: 0;
+    }
+    .nav-links ul li{
+        margin: 15px 0;
+    }
+    .navbar.scrolled .nav-links ul li a{
+        color: white;
+    }
+    .nav-links.active ul .prenota{
+        background: white;
+        color: #151515;
+    }
+    .navbar.scrolled .nav-links ul .prenota{
+        border: 1px solid white;
+    }  
+    .nav-icon{
+        display: block;
+        color: black;
+    }
+}
+
+@media screen and (max-width: 892px) {
+    /* ====== HEADER ======= */
+    .nav-links{
+        top: 140px;
+    }
+}
+
+@media screen and (max-width: 750px) {
+    /* ====== HEADER ======= */
+    .title{
+        font-size: 35px;
+    }
+    .paragraph{
+        font-size: 13px;
+        padding: 0 30px;
+    }
+    .contact-btn2{
+        display: block !important;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        z-index: 1100;
+        width: 100%;
+        background: #2a2a2a;
+        text-align: center;
+        padding: 20px;
+    }
+}
+
+/* @media screen and (max-width: 650px) {
+    
+} */
+
+@media screen and (max-width: 500px) {
+    /* ===== HEADER ====== */
+    .header{
+        height: 70vh;
+    }
+    .banner{
+        font-size: 12px;
+    }
+    .logo{
+        height: 50px;
+        width: 70px;
+    }
+    .nav-links{
+        top: 115px;
+    }
+    .nav-icon{
+        font-size: 25px;
+    }
+    .text-header{
+        top: calc(((70vh - 115px)/2) + 50px);
+    }
+    .title{
+        font-size: 26px;
+    }
+    .paragraph{
+        font-size: 12px;
+    }
+    .scopri a{
+        font-size: 13px;
+    }
+    /* ====== SERVIZI ======= */
+    .description{
+        min-height: 400px;
+    }
+    /* ====== SOLUZIONI ABITATIVE ====== */
+    .testo-soluzioni{
+        width: 100%;
+    }
+    .planimetria-container{
+        width: 368px;
+        margin-bottom: 6rem;
+    }
+    .plan-image{
+        padding: 20px;
+    }
+    .soluzioni-abitative .swiper-wrapper{
+        margin-bottom: 50px;
+    }
+    .soluzioni-abitative .prev-button{
+        top: initial;
+        bottom: 0;
+        left: 44%;
+        transform: translateX(-50%);
+        z-index: 1000;
+    }
+    
+    .soluzioni-abitative .next-button{
+        top: initial;
+        bottom: 0;
+        right: 44%;
+        transform: translateX(50%);
+        z-index: 10;
+    }
+    /* ====== CONTATTI ====== */
+    .contatti{
+        padding: 80px 40px;
+    }
+    /* ===== MAPS ===== */
+    .maps{
+        background-position: 70% 20%;
+    }
+}
+
+@media screen and (max-width: 369px) {
+    /* ====== HEADER ========= */
+    .nav-links{
+        top: 125px;
+    }
+}
